refactor PutReviewLike API
