# swagger.yaml
@@ -718,7 +718,41 @@ paths:
                                             type: 'string'
                             message:
                                 type: 'string'
-
+    /likes/review:
+        put:
+            description: 'レビューに対するLIKE'
+            parameters:
+                -   in: 'body'
+                    name: 'review_id'
+                    schema:
+                        type: 'object'
+                        properties:
+                            review_id:
+                                type: integer
+            responses:
+                200:
+                    description: 'LIKE成功'
+                401:
+                    description: '未認証'
+                    schema:
+                        type: 'object'
+                        properties:
+                            message:
+                                type: 'string'
+                422:
+                    description: 'LIKE失敗'
+                    schema:
+                        type: 'object'
+                        properties:
+                            errors:
+                                type: 'object'
+                                properties:
+                                    review_id:
+                                        type: 'array'
+                                        items:
+                                            type: 'string'
+                            message:
+                                type: 'string'
 
 definitions:
     Product:
